[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
log = "0.4.20"
tokio = { version = "1.35.0", features = ["full"] }
wgpu = "0.18.0"
winit = { version = "0.29.4", features = ["rwh_05"] }
